--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     </header>
                     <span>I am an experienced web developer focused on building front end applications mostly with Angular Framework.</span>
                     <span>On this site you will find code samples from my experiments with JavaScript libraries such as A-Frame, TensorFlow.js and much more.</span>
-                    <span>Also, you will be able to find blogposts regarding the latest tech news, JavaScript functionalities and tutorial.</span>
+                    <span>Also, you will be able to find blog posts regarding the latest tech news, JavaScript functionalities and tutorial.</span>
 									</div>
 									<span class="image object">
 										<img src="images/description-image.jpg" alt="" />
@@ -54,17 +54,22 @@
 									</header>
 									<div class="features">
 										<article>
-											<a href="https://github.com/paul-beresca/aframeintro"><span class="icon fa-gem"></span></a>
+											<a href="https://paul-beresca-aframe.netlify.com"><span class="icon fa-gem"></span></a>
 											<div class="content">
-												<a href="https://github.com/paul-beresca/aframeintro"><h3>A-Frame Collision Intro</h3></a>
+												<a href="https://paul-beresca-aframe.netlify.com"><h3>A-Frame Collision Intro</h3></a>
 												<p>Project based on A-Frame library from Mozilla that allows creating 3D objects in the browser.</p>
 											</div>
 										</article>
 										<article>
-											<span class="icon solid fa-paper-plane"></span>
+											<a href="https://paul-beresca-threat-detector.netlify.com"><span class="icon fa-gem"></span></a>
 											<div class="content">
-												<h3>Sapien veroeros</h3>
-												<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+												<a href="https://paul-beresca-threat-detector.netlify.com"><h3>Machine Learning powered Threat Detector</h3></a>
+												<p>The project was made for an internal contest at Assist Software. It was built with Angular 8 and TensorFlowJS. 
+													The main purpose of the project is to demonstrate the usage of TensorFlowJS.
+													The project has the 'Surveillance Mode' where a user is able to apply the trained model on some videos from the available list
+													and the 'Live Mode' where you can test the trained model using a webcam. The model is trained to identify 3 different classes:
+													Pistols, Rifles and Bears. 
+												</p>
 											</div>
 										</article>
 										<article>
